tests/baselines/reference/defaultValueInFunctionOverload1(strict=true).errors.txt
defaultValueInFunctionOverload1.ts(1,10): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
defaultValueInFunctionOverload1.ts(1,14): error TS2371: A parameter initializer is only allowed in a function or constructor implementation.


==== defaultValueInFunctionOverload1.ts (2 errors) ====
    function foo(x: string = '');
             ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
                 ~~~~~~~~~~~~~~
!!! error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
    function foo(x = '') { }